<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.skytasul</groupId>
	<artifactId>jukebox</artifactId>
	<version>1.20.15-DEV</version>
	<name>JukeBox</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<repositories>
		<repository>
			<id>spigotmc-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>minecraft-libraries</id>
			<url>https://libraries.minecraft.net</url>
		</repository>
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>maven-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>codemc-repo</id>
			<url>https://repo.codemc.org/repository/maven-public</url>
		</repository>
		<repository>
			<id>opencollab-snapshot</id>
			<url>https://repo.opencollab.dev/main/</url>
		</repository>
		<repository>
			<name>Central Portal Snapshots</name>
			<id>central-portal-snapshots</id>
			<url>https://central.sonatype.com/repository/maven-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.11.5</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>com.github.koca2000</groupId>
			<artifactId>NoteBlockAPI</artifactId>
			<version>1.6.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.21.1-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.bstats</groupId>
			<artifactId>bstats-bukkit</artifactId>
			<version>3.0.2</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.tchristofferson</groupId>
			<artifactId>ConfigUpdater</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>org.geysermc.floodgate</groupId>
			<artifactId>api</artifactId>
			<version>2.2.4-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<relocations>
						<relocation>
							<pattern>org.bstats</pattern>
							<shadedPattern>fr.skytasul.music.utils.bstats</shadedPattern>
						</relocation>
						<relocation>
							<pattern>com.tchristofferson.configupdater</pattern>
							<shadedPattern>fr.skytasul.music.utils.configupdater</shadedPattern>
						</relocation>
					</relocations>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
